2007-06-04  Petr Mikulik  <mikulik@physics.muni.cz>

	* term/djsvga.trm: Unify color sequence comply with other terminals.
	Fix DJSVGA_set_font(fontname) for an empty fontname.

	* src/plot.c (main): Avoid printing "??Unknow" as the System welcome
	message under some versions of DOS (compilation by DJGPP).

	* config/config.dj2: Define HAVE_STRINGS_H.

2007-06-03  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/history.c (write_history_n): Cannot use int_error() when exiting
	gnuplot.

2007-06-03  Petr Mikulik  <mikulik@physics.muni.cz>

	* config/config.amg config/config.cyg config/config.mgw: Removed
	PNG_FOR_GIF.

	* config/makefile.cyg config/makefile.mgw: Removed PNG_FOR_GIF and GIF.
	Write requirement for gd 2.0 and newer. Enable GIF_ANIMATION and JPEG.

2007-06-01  Ethan Merritt  <merritt@u.washington.edu>

	* INSTALL: Remove obsolete instructions for unix builds without
	./configure, old png driver.

2007-06-01  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* src/command.c (read_line): Introduce a new static function
	'gp_get_string' called by read_line(), so that #ifdefs are grouped and
	read_line() is more readable.
	(help_command)[_Windows && NO_GIH]: trivial cleanup of #ifdef.

2007-05-31  Ethan Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc: Clean up the section on the 'bind' command.

	* src/mouse.c: Update the dump of current hotkeys so that it doesn't
	claim to apply only to x11.

2007-05-31  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/command.c (pause_command): On Windows, Gnuplot always bailed to
	command line after "pause mouse".
	Print the message of "pause <message>" into the gnuplot terminal
	unless for "pause -1 <message>" (message box).

2007-05-30  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/makefile.all: Added tabulate.$(O).

2007-05-25  Ethan Merritt  <merritt@u.washington.edu>

	* term/latex.trm: Add an explicit size option; clarify documentation.
	set terminal {latex | emtex} {default | {courier|roman} {<fontsize>}}